# GameEngine

./: .clangd  .gitignore  .nvimrc  ASSET_PREVIEW_ALIGNMENT_FIX.md  ASSET_PREVIEW_TEXT_FIX.md  ASSET_ROTATION_RENDERING_FIX.md  BUILD.md  CENTERED_VIEWPORT_SYSTEM.md  CLASSIC_RPG_SHADERS.md  CMakeLists.txt  COLLISION_GRID_MOVEMENT.md  COLLISION_SYSTEM_UPDATE.md  COMPREHENSIVE_ROTATION_FIXES.md  COORDINATE_SYSTEM_ANALYSIS.md  CORNER_PREVIEW_SCALING_FIX.md  EDITOR_ZOOM_AND_UI_FEATURES.md  ENHANCED_GRID_PREVIEW.md  GRID_MOVEMENT_COOLDOWN.md  GRID_MOVEMENT_EXAMPLES.md  INFINITE_WORLD_AND_AXIS_FEATURES.md  LEVEL_6_ANALYSIS.md  LEVEL_DESIGN_GUIDE.md  MAKEFILE_FIX.md  MAP_EDITOR_UI_IMPROVEMENTS.md  MIGRATION_COMPLETED.md  MULTI_CELL_ASSET_OPTIMIZATION.md  Makefile  Makefile.battle_demo  PLAY_GRID_ROTATION_SUPPORT.md  PLAY_SCENE_ROTATION_FIX.md  README.md  ROTATION_FIX_SUMMARY.md  ROTATION_GRID_FIXES.md  RPG_COMPONENTS.hpp  RPG_SHADER_USAGE_GUIDE.md  RPG_SKILLS_ITEMS.hpp  SCENE_RENAMING_CHANGES.md  SCENE_REORGANIZATION.md  SHADER_DEMO_INTEGRATION.md  SHADER_DEMO_SIZING.md  (+53 more)
.cache/clangd/index/: action.hpp.C89D5C09C4DC60C8.idx  animation.cpp.EEAECFAA81F03A20.idx  animation.hpp.9E4FE6817457AA74.idx  assets.cpp.0CFE491D9F26922B.idx  assets.hpp.6BF5FC0FA8C4E584.idx  components.hpp.E7ED44F64F29C2F6.idx  entity.cpp.5997A2B57C34C2D9.idx  entity.hpp.51AB45A83B92D931.idx  entity.tpp.73821C3249DBEB1C.idx  entity_manager.cpp.AA5A1816F504CBB3.idx  entity_manager.hpp.9341A8C7FC0609DD.idx  game_engine.cpp.7A5A9F71916D5EC1.idx  game_engine.hpp.2A9032CC1888A598.idx  imconfig-SFML.h.6091DD904F1FE444.idx  imconfig.h.E42FE9513B56E41B.idx  imgui-SFML.cpp.D38490CD6AEB8CCE.idx  imgui-SFML.h.4EABF9EBBDB2DB91.idx  imgui-SFML_export.h.375EE7ED5ACFBB88.idx  (+20 more)
assets/: dialogue_example.json  dialogue_example.md  dialogue_example.yaml  dialogue_simple.txt
assets/aseprite/: Sprite-0001.aseprite
assets/shaders/: berserk_rage.frag  damage_flash.frag  darkness_blind.frag  freeze_ice.frag  glow.frag  haste_speed.frag  holy_protect.frag  invisibility.frag  magic_charge.frag  pixelate.frag  poison_effect.frag  stone_petrify.frag  tint.frag  wave.frag  wave_test.frag
assets/sounds/: README.md
cmake_build/: CMakeCache.txt  Makefile  cmake_install.cmake
config/: character_animations.json
doc/: ASSET_TILE_PATTERN.md  BATTLE_DEMO_INSTRUCTIONS.md  BATTLE_SYSTEM_DEMO.md  BATTLE_SYSTEM_INTEGRATION.md  DOCUMENTATION_CONSOLIDATION.md  DOCUMENTATION_ORGANIZATION.md  LOADING_SCREEN_IMPLEMENTATION.md  VIEWPORT_FIXES_SUMMARY.md  VIEWPORT_REFACTORING_SUMMARY.md
doc/development/: COMPONENT_ORGANIZATION.md  ORGANIZATION_IMPLEMENTATION.md  PROJECT_ORGANIZATION.md  RPG_DEVELOPMENT_GUIDE.md  RPG_DEVELOPMENT_ROADMAP.md  RPG_SCENES_IMPLEMENTATION.md  STANDARDIZED_ACTIONS.md
doc/examples/: ANIMATION_EXAMPLES.md  LEVEL_DESIGN_GUIDE.md
doc/features/: BATTLE_SYSTEM.md
doc/systems/: CAMERA_SYSTEM.md  CONFIGURABLE_SCALE_SYSTEM.md  CONFIGURABLE_VIEWPORT_SYSTEM.md  LOADING_SCREEN_SYSTEM.md  SOUND_SYSTEM.md
include/imgui/: imconfig.h
info/: assignment-02.txt  assignment-03.txt
metadata/: asset_properties.txt  assets.txt  battle_assets.txt  level1.txt  scene_assets.txt  screen_config.txt  sound_config.txt
metadata/autotiling/: ground_64px.json  test_tileset_large.json  test_tileset_small.json  wall_64px.json  water_64px.json
metadata/characters/: enemies_level_1.txt  enemies_level_2.txt  npc_definitions.txt  party_hero.txt  party_mage.txt  party_rogue.txt  party_warrior.txt  player_config.txt  spells.txt
metadata/levels/: demo_level.txt  infinite_test.txt  level1.txt  level1_layered.txt  level_1.txt  level_2.txt  level_3.txt  level_4.txt  level_5.txt  spawn_test.txt  spawn_test_bottom_right.txt  spawn_test_no_spawn.txt  spawn_test_top_left.txt  test_1x5_final_fix.txt  test_1x5_fix.txt  test_1x5_rotation.txt  test_multicell.txt  test_rotation.txt
saves/: save_slot_1.json  save_slot_1.sav  save_slot_10.sav  save_slot_11.sav  save_slot_12.sav  save_slot_13.sav  save_slot_14.sav  save_slot_15.sav  save_slot_16.sav  save_slot_2.sav  save_slot_3.sav  save_slot_4.sav  save_slot_5.sav  save_slot_6.sav  save_slot_7.sav  save_slot_8.sav  save_slot_9.sav
src/: action.hpp  action_types.hpp  animation.cpp  animation.hpp  assets.cpp  assets.hpp  battle_config_loader.cpp  battle_config_loader.hpp  ccollision.hpp  ccshape.hpp  cinput.hpp  clifespan.hpp  components.hpp  cscore.hpp  ctransform.hpp  entity.cpp  entity.hpp  entity.tpp  entity_manager.cpp  entity_manager.hpp  game.cpp  game.hpp  game_engine.cpp  game_engine.hpp  input_manager.hpp  scene.cpp  scene.hpp  scene_menu.cpp  scene_menu.hpp  scene_options.cpp  scene_options.hpp  scene_play.cpp  scene_play.hpp  vec2.cpp  vec2.hpp
src/components/: CSave.hpp  base_component.hpp  common_components.hpp  engine_components.hpp  game_components.hpp  layer_component.hpp  npc_components.hpp  player_components.hpp
src/constants/: tile_constants.hpp
src/entities/: character.cpp  character.hpp  character_factory.cpp  character_factory.hpp  npc.cpp  npc.hpp  player.cpp  player.hpp
src/graphics/: shader_manager.cpp  shader_manager.hpp
src/scenes/: scene.cpp  scene.hpp  scene_autotile_config.cpp  scene_autotile_config.hpp  scene_autotile_editor.cpp  scene_autotile_editor.hpp  scene_battle.cpp  scene_battle.hpp  scene_battle_demo.cpp  scene_battle_demo.hpp  scene_dialogue.cpp  scene_dialogue.hpp  scene_grid_map_editor.cpp  scene_grid_map_editor.hpp  scene_level_selector.cpp  scene_level_selector.hpp  scene_loading.cpp  scene_loading.hpp  scene_map_editor.cpp  scene_map_editor.hpp  scene_menu.cpp  scene_options.cpp  scene_play.cpp  scene_play.hpp  scene_play_grid.cpp  scene_play_grid.hpp  scene_save_load.cpp  scene_save_load.hpp  scene_shader_demo.cpp  scene_shader_demo.hpp  scene_sound_settings.cpp  scene_sound_settings.hpp  scene_viewport_config.cpp  scene_viewport_config.hpp
src/systems/: auto_tiling_manager.cpp  auto_tiling_manager.hpp  auto_tiling_rule.cpp  auto_tiling_rule.hpp  save_system.cpp  save_system.hpp
src/ui/: command_overlay.cpp  command_overlay.hpp
(+5 files in other folders)
